[package]
name = "gnirehtet"
version = "2.5.4"
authors = ["Romain Vimont <rom@rom1v.com>"]
edition = "2021"

[lib]
name = "relaylib"
path = "src/lib.rs"

[dependencies]
mio = { version = "0.8", features = [
    "net",
    "os-poll",
    "os-ext",
] } # for async I/O
slab = "0.4" # helper for mio Tokens
log = "0.4" # for logs
chrono = "0.4" # for formatting timestamp in logs
byteorder = "1.3" # for reading/writing binary
rand = "0.8" # for random TCP sequence number
ctrlc = { version = "3.0", features = ["termination"] } # for handling Ctrl+C
socket2 = { version = "0.4", features = ["all"] }
packet = "0.1"

[profile.release]
lto = true # link-time optimization
